<resources>
    <string name="app_name">CredsPoApp</string>
    <string name="forgot_pw"><u>Forgot your password?</u></string>
    <string name="create_an_account"> Create an account</string>
    <string name="login_footer_string">Not registered yet?</string>
    <string name="hide"><b>HIDE</b></string>
    <string name="show">SHOW</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="credspoicon">CredsPoIcon</string>
    <string name="logoicon">logoIcon</string>
    <string name="password">Password</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="first_name">First Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="last_name">Last name</string>
    <string name="birth_year">Birth year</string>
    <string name="select_birth_year">Select birth year</string>
    <string name="select_country">Select country</string>
    <string name="country">Country</string>
    <string name="login_info">LOGIN INFO</string>
    <string name="i_accept_privacy_and_policy">I accept privacy and policy</string>
    <string name="privacy_and_policy">Privacy and policy</string>
    <string name="thank_you_for_registering">Thank you for registering!</string>
    <string name="enter_the_4_digits_verification_code_we_sent_to_your_mail">Enter the 4 digits verification code we sent to your mail</string>
    <string name="verification_successful">Verification successful!</string>
    <string name="invalid_login_email_or_password_were_not_correct">Invalid login. Email or password were not correct</string>
    <string name="skills">Skills</string>
    <string name="skills_points">0 points</string>
    <string name="attributes">Attributes</string>
    <string name="waypoints">Waypoints</string>
    <string name="recently_earned_baddges">Recently earned baddges</string>
    <string name="add_activity">Add activity</string>
    <string name="home">Home</string>
    <string name="assets">Assets</string>
    <string name="activities">Activities</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="all">All</string>
    <string name="select_badge">Select badge</string>
    <string name="log_out">Log out</string>
    <string name="choose_image">Choose image</string>
    <string name="do_you_want_to_select_an_image_from_gallery_or_take_a_photo">Do you want to select an image from gallery or take a photo?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="dummy_date">01/01/2020</string>
    <string name="activity_name">Activity Name</string>
    <string name="badge_name">Badge name</string>
    <string name="ver_code_fail">Verification code not correct</string>
    <string name="ver_success">Verification successful</string>
</resources>